Fixed small bug: prevent unwanted scrollbar persistence when switching tabs

--- a/theme.css
+++ b/theme.css
@@ -1,3 +1,8 @@
+main {
+  overflow-y: auto;
+  scrollbar-gutter: auto;
+}
+
 body,
 main,
 nav,
@@ -139,13 +144,13 @@ action-button button {
 action-button::before {
   content: "";
   position: absolute;
-  top: -0.25vw; /* Thinner border */
+  top: -0.25vw; /* Border Thickness */
   left: -0.25vw;
-  width: calc(100% + 0.5vw); /* Slightly larger hexagon */
+  width: calc(100% + 0.5vw);
   height: calc(100% + 0.5vw);
-  background-color: white; /* Border color */
+  background-color: var(--color-accent); /* Border color */
   clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%);
-  z-index: 1; /* Place it behind the button */
+  z-index: 1; /* Behind the button */
 }
 
 /* Hover Effect */
